--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css/reset.css" />
     <link rel="icon" href="/resources/logo_favicon.png" type="picture" />
-    <link rel="stylesheet" href="/styles.css/styles-header.css" />
-    <link rel="stylesheet" href="/styles.css/styles-burger.css" />
+    <link rel="stylesheet" href="styles.css/styles-header.css" />
+    <link rel="stylesheet" href="styles.css/styles-burger.css" />
     <link rel="stylesheet" href="styles.css/styles-main.css" />
     <link rel="stylesheet" href="styles.css/styles-about.css" />
     <link rel="stylesheet" href="styles.css/styles-description.css" />
