--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           </button>
         </div>
       </div>
-      <script src="/script/popup.js"></script>
+      <script src="script/popup.js"></script>
 
       <!-- ОТЗЫВЫ -->
       <section class="comments container">
